syntax = "proto3";

package proto;

service KVStore {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}

message AppendEntriesRequest {
  string term = 1;
  string leader_id = 2;
  string prev_log_index = 3;
  string prev_log_term = 4;
  repeated Entry entries = 5; // null for heartbeat
  string leaderCommit = 6;
}

message AppendEntriesResponse {
  string term = 1;
  bool success = 2;
}

message RequestVoteRequest {}

message RequestVoteResponse {}

message Entry {
  string key = 1;
  string value = 2;
}
